--- a/css/app.css
+++ b/css/app.css
@@ -1,17 +1,34 @@
-.page-header p{
+.page-header p {
     font-family: sans-serif;
     font-size: 35px;
 }
-.page-header div{
+
+.page-header div {
     justify-content: space-between;
 }
-.page-header{
+
+.page-header {
     box-shadow: 2px 2px 2px #e6e6e6;
     display: flex;
 }
-.header-image{
+
+.header-image {
     flex: 1;
 }
-.heading{
+
+.heading {
     flex: 6;
+}
+
+.navbar {
+    display: flex;
+    height: 120;
+}
+
+.navbar div {
+    flex: 1;
+    margin: 0 8% 0 8%;
+    font-family: sans-serif;
+    color: #666;
+    align-items: center;
 }
