--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,4 @@
+/*header styling*/
 .page-header p {
     font-family: sans-serif;
     font-size: 35px;
@@ -20,6 +21,7 @@
     flex: 6;
 }
 
+/*navbar styling*/
 .navbar {
     display: flex;
     height: 120;
@@ -31,4 +33,28 @@
     font-family: sans-serif;
     color: #666;
     align-items: center;
+}
+
+/*jumbotron styling*/
+.jumbotron{
+    display: flex;
+}
+.main-image{
+    flex: 1;
+    position: relative;
+    display: block;
+}
+.main-image img{
+    height: 50vh;
+    width: 100vw;
+}
+.headline{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: white;
+    height: 30%;
+    width: 100%;
+    padding-left: 10px;
+    color: gray;
 }
