--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,23 @@
     padding-left: 10px;
     color: gray;
 }
+
+/*top news section styling*/
+.top-news > div{
+    box-shadow: 0px 2px #e6e6e6;
+    padding: 10px;
+    font-size: small;
+    font-family: sans-serif;
+    color: #666;
+}
+.top{
+    display: flex;
+}
+.title{
+    flex: 7;
+    font-size: large;
+}
+.link{
+    flex: 1;
+    font-size: large;
+}
