--- a/css/app.css
+++ b/css/app.css
@@ -132,3 +132,24 @@ tr:nth-child(odd) {
       height: 100px;
       width: 100px;
   }
+
+  /*latest news section*/
+  .latest{
+      display: flex;
+      margin-top: 20px;
+  }
+  .latest-news > div{
+    box-shadow: 0px 2px #e6e6e6;
+    padding: 10px;
+    font-size: small;
+    font-family: sans-serif;
+    color: #666;
+  }
+  .image{
+    min-height: 100px;
+  }
+  .image img{
+      height: 100px;
+      float: left;
+  }
+  
