--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,7 @@
+.container{
+    padding: 10px 20px 10px 20px;
+}
+
 /*header styling*/
 .page-header p {
     font-family: sans-serif;
@@ -18,7 +22,11 @@
 }
 
 .heading {
-    flex: 6;
+    flex: 5;
+}
+
+.three-icon{
+    flex: 1;
 }
 
 /*navbar styling*/
@@ -45,25 +53,26 @@
     display: block;
 }
 .main-image img{
-    height: 50vh;
-    width: 100vw;
+    /*height: 50vh;*/
+    width: 100%;
 }
 .headline{
     position: absolute;
     bottom: 0;
     left: 0;
-    background-color: white;
-    height: 30%;
+    background-color: black;
+    /*height: 30%;*/
     width: 100%;
-    padding-left: 10px;
-    color: gray;
+    /*padding-left: 10px;*/
+    color: white;
+    opacity: 0.6;
 }
 
 /*top news section styling*/
 .top-news > div{
     box-shadow: 0px 2px #e6e6e6;
-    padding: 10px;
-    font-size: small;
+    padding: 20px 0px 20px 0px;
+    font-size: x-small;
     font-family: sans-serif;
     color: #666;
 }
