--- a/css/app.css
+++ b/css/app.css
@@ -5,15 +5,12 @@
 /*header styling*/
 .page-header p {
     font-family: sans-serif;
-    font-size: 55px;
+    /*font-size: 55px;*/
     margin-top: 10px;
     margin-bottom: 10px;
 }
 .headline p{
-    font-size: 30px;
-}
-.headline h1{
-    font-size: 40px;
+    /*font-size: 30px;*/
 }
 
 .page-header div {
@@ -45,10 +42,13 @@
 
 .navbar div {
     flex: 1;
-    margin: 0 8% 0 8%;
+     margin: 0 5% 0 5%; 
     font-family: sans-serif;
     color: #666;
     align-items: center;
+}
+@media(max-width: 500px){
+    .navbar{display: none;}
 }
 
 /*jumbotron styling*/
@@ -80,7 +80,7 @@
 .top-news > div{
     box-shadow: 0px 2px #e6e6e6;
     padding: 20px 0px 20px 0px;
-    font-size: 12px;
+    font-size: 14px;
     font-family: sans-serif;
     color: #666;
 }
@@ -102,16 +102,16 @@
     text-align: center;
     border-collapse: collapse;
     font-family: sans-serif;
-    font-size: 30px;
+    font-size: 15px;
 }
 
 tr th{
     background-color: #669999;
     color: #fff;
-    padding: 20px;
+    padding: 10px;
 }
 tr td{
-    padding: 20px;
+    padding: 10px;
 }
 tr:nth-child(odd) {
     background-color: #e0ebeb;
@@ -135,10 +135,11 @@ tr:nth-child(odd) {
   .weather-week{
       display: flex;
       text-align: center;
+      /* flex-wrap: wrap; */
   }
   .weather-week div{
       flex: 1;
-      font-size: 30px;
+      font-size: 15px;
   }
   .location{
     font-size: xx-large;
@@ -148,12 +149,12 @@ tr:nth-child(odd) {
       margin-top: 0%;
   }
   .weather-week div img{
-      height: 100px;
-      width: 100px;
+      /* height: 100px;
+      width: 100px; */
   }
   .current-weather div img{
-    height: 200px;
-    width: 200px;
+    /* height: 200px;
+    width: 200px; */
   }
 
   /*latest news section*/
@@ -163,21 +164,21 @@ tr:nth-child(odd) {
       box-shadow: 0px 2px #e6e6e6;
   }
   .latest div{
-    font-size: 35px;
+    font-size: large;
   }
   .latest-news > div{
     /*box-shadow: 0px 2px #e6e6e6;*/
     padding: 10px;
-    font-size: 12px;
+    font-size: 14px;
     font-family: sans-serif;
     color: #666;
     margin-top: 10px;
   }
   .image{
-    min-height: 200px;
+    min-height: 100px;
   }
   .image img{
-      height: 200px;
+      height: 100px;
       float: left;
   }
   #last-news{
