--- a/css/app.css
+++ b/css/app.css
@@ -5,8 +5,8 @@
 /*header styling*/
 
 .page-header p {
-    font-family: sans-serif;
-    font-size: 1.5rem;
+    font-family: fjalla-one;
+    font-size: 1.6rem;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -32,7 +32,7 @@
     flex: 10;
 }
 
-.three-icon {
+.hamburger-icon {
     flex: 1;
     padding-right: 5px;
 }
@@ -59,11 +59,11 @@
 }
 
 @media(min-width: 500px) {
-    .three-icon {
+    .hamburger-icon {
         display: none;
     }
     .page-header p {
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
 }
 
@@ -175,6 +175,10 @@ tr td {
     font-family: Verdana, sans-serif;
 }
 
+.weather-title {
+    padding-left: 1rem;
+}
+
 .current-weather {
     display: flex;
 }
@@ -249,7 +253,6 @@ tr td {
     margin-right: 0.5rem;
 }
 
-
 #last-news {
     box-shadow: 0px 2px #e6e6e6;
 }
@@ -310,4 +313,3 @@ tr td {
         flex-wrap: wrap;
     }
 }
-
