--- a/css/app.css
+++ b/css/app.css
@@ -5,7 +5,7 @@
 /*header styling*/
 
 .page-header p {
-    font-family: fjalla-one;
+    font-family: 'Fjalla One', sans-serif;
     font-size: 1.6rem;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -63,7 +63,7 @@
         display: none;
     }
     .page-header p {
-        font-size: 2.5rem;
+        font-size: 2rem;
     }
 }
 
