--- a/css/app.css
+++ b/css/app.css
@@ -52,7 +52,13 @@
     align-items: center;
 }
 
-@media(max-width: 500px) {
+@media(max-width: 900px) {
+    
+    .container{
+        padding: 0px;
+    }
+}
+@media(max-width: 500px){
     .navbar {
         display: none;
     }
@@ -65,6 +71,7 @@
     .page-header p {
         font-size: 2rem;
     }
+    
 }
 
 /*jumbotron styling*/
@@ -77,12 +84,25 @@
     flex: 1;
     position: relative;
     display: block;
-    height: 25rem;
+    height: 35rem;
+}
+@media(max-width: 500px){
+    .main-image{
+        height: 20rem;
+    }
+}
+@media(min-width: 500px) and (max-width: 900px){
+    .main-image{
+        height: 25rem;
+    }
 }
 
-.main-image img {
+.main-image .img-holder {
+    background-image: url("../images/dog.jpg");
     height: 100%;
-    width: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .headline {
@@ -294,11 +314,11 @@ tr td {
     }
     .jumbotron {
         order: 1;
-        width: 49%;
+        width: 60%;
     }
     .weather {
         order: 2;
-        width: 49%;
+        width: 38%;
         padding-left: 1px;
     }
     .top-news {
