--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 .container {
     padding: 10px 20px 10px 20px;
 }
@@ -6,7 +10,7 @@
 
 .page-header p {
     font-family: 'Montserrat', sans-serif;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     margin-top: 10px;
     margin-bottom: 10px;
 }
@@ -41,6 +45,18 @@
     height: 3rem;
 }
 
+@media(min-width: 500px) {
+    .page-header {
+        padding: 10px;
+    }
+    .page-header div img {
+        height: 4rem;
+    }
+    .heading {
+        padding: 5px;
+    }
+}
+
 /*navbar styling*/
 
 .navbar {
@@ -54,6 +70,11 @@
     font-family: sans-serif;
     color: #666;
     align-items: center;
+}
+
+.navbar div p a {
+    color: #666;
+    text-decoration: none;
 }
 
 @media(max-width: 900px) {
@@ -73,7 +94,7 @@
         display: none;
     }
     .page-header p {
-        font-size: 2rem;
+        font-size: 3rem;
     }
 }
 
@@ -122,7 +143,7 @@
     opacity: 0.8;
 }
 
-@media(min-width: 800px) {
+@media(min-width: 900px) {
     .headline {
         background-color: #fff;
         color: #999;
@@ -164,16 +185,16 @@
     text-align: center;
     border-collapse: collapse;
     font-family: sans-serif;
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 
 tr th {
-    padding: 10px;
+    padding: 15px;
     color: #aaa;
 }
 
 tr td {
-    padding: 10px;
+    padding: 15px;
 }
 
 .left-align {
@@ -184,13 +205,13 @@ tr td {
     text-align: right;
 }
 
-@media(max-width: 800px) {
+@media(max-width: 900px) {
     tr th {
-        background-color: #669999;
+        background-color: #738c8c;
         color: #fff;
     }
     tr:nth-child(odd) {
-        background-color: #e0ebeb;
+        background-color: #e3e8e8;
     }
 }
 
@@ -225,7 +246,13 @@ tr td {
 
 .weather-week div {
     flex: 1;
-    font-size: 1rem;
+    font-size: 0.9rem;
+}
+
+@media(min-width: 900px) {
+    .weather-week div img {
+        height: 10rem;
+    }
 }
 
 .location {
@@ -235,16 +262,6 @@ tr td {
 
 .loc-weather {
     margin-top: 0%;
-}
-
-.weather-week div img {
-    /* height: 100px;
-      width: 100px; */
-}
-
-.current-weather div img {
-    /* height: 200px;
-    width: 200px; */
 }
 
 /*latest news section*/
@@ -298,6 +315,11 @@ tr td {
     padding-right: 10px;
 }
 
+.footer div a {
+    text-decoration: none;
+    color: #000;
+}
+
 .contact {
     flex: 1;
 }
@@ -312,7 +334,7 @@ tr td {
 
 /*for switching in case of tablet view*/
 
-@media (min-width: 500px) and (max-width: 800px) {
+@media (min-width: 500px) and (max-width: 900px) {
     .container {
         display: flex;
         flex-wrap: wrap;
