--- a/css/app.css
+++ b/css/app.css
@@ -55,6 +55,18 @@ body {
     .heading {
         padding: 5px;
     }
+    .page-header p {
+        font-size: 2.5rem;
+    }
+}
+
+@media(min-width: 900px) {
+    .page-header div img {
+        height: 5rem;
+    }
+    .page-header p {
+        font-size: 3rem;
+    }
 }
 
 /*navbar styling*/
@@ -92,9 +104,6 @@ body {
 @media(min-width: 500px) {
     .hamburger-icon {
         display: none;
-    }
-    .page-header p {
-        font-size: 3rem;
     }
 }
 
@@ -251,7 +260,7 @@ tr td {
 
 @media(min-width: 900px) {
     .weather-week div img {
-        height: 10rem;
+        height: 9rem;
     }
 }
 
@@ -286,11 +295,11 @@ tr td {
 }
 
 .image {
-    min-height: 100px;
+    min-height: 6rem;
 }
 
 .image img {
-    height: 100px;
+    height: 6rem;
     float: left;
     margin-right: 0.5rem;
 }
